# barebones-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-Debug.sh  clang-tidy-checks.py  clean-build.sh  conanfile.txt  reset.sh  test.sh
scripts/: run-clang-tidy.py
scripts/cmake/: CodeCoverage.cmake  clangformat.cmake  cppcheck.cmake
src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
tests/: CMakeLists.txt  hello_test.cpp  main.cpp
